k8s/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  labels:
    app: identity
spec:
  replicas: 3
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
      - name: identity
        image: gcr.io/id-test-deploy-2/identityserver:v2
        ports:
        - name: identity
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP



---
apiVersion: v1
kind: Service
metadata:
  name: identity
  labels:
    app: identity
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    name: http
  selector:
    app: identity
