k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "identity-lb"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: tlssecret
  backend:
    serviceName: identity
    servicePort: 8080
  # rules:
  # - http:
  #     paths:
  #     - path: /*
  #       backend:
  #         serviceName: identity
  #         servicePort: 8080
